# InfiniTrain

./: THIRD_PARTY_NOTICES.md
docs/: generator-design.md
docs/superpowers/notes/: 2026-05-21-phase2-pr-prep.md
example/gpt2/: checkpoint_loader.cc
example/llama3/: checkpoint_loader.cc
infini_train/include/: generator.h  tensor.h
infini_train/include/autograd/: dropout.h
infini_train/include/core/generator/: cpu_generator_impl.h  cuda_generator_impl.h  generator_impl.h
infini_train/include/nn/: functional.h  init.h
infini_train/include/nn/modules/: dropout.h  module.h
infini_train/src/: tensor.cc
infini_train/src/autograd/: dropout.cc
infini_train/src/core/generator/: generator_impl.cc
infini_train/src/kernels/cpu/: cross_entropy.cc  dropout.cc  normal_random.cc  transform.cc  uniform_random.cc
infini_train/src/kernels/cuda/: dropout.cu  elementwise.cu  gather.cu  no_op.cu  normal_random.cu  reduction.cu  uniform_random.cu
infini_train/src/nn/: functional.cc  init.cc
infini_train/src/nn/modules/: dropout.cc  module.cc
scripts/: check_reproducibility.sh
tests/: CMakeLists.txt
tests/generator/: CMakeLists.txt  test_default.cc  test_dispatch.cc  test_generator_basic.cc  test_initial_seed.cc  test_module_training.cc  test_ops_dropout.cc  test_ops_kaiming.cc  test_ops_normal.cc  test_ops_uniform.cc  test_seed.cc  test_state.cc
tests/generator/cpu_only/: test_cpu_generator_impl.cc  test_state_validation.cc
tests/generator/cuda_only/: test_cuda_generator_impl.cc  test_cuda_state_validation.cc  test_default_multi_gpu.cc
(+4 files in other folders)
