# Tests CMakeLists.txt
# This file manages the test infrastructure for InfiniTrain

# Include shared test macros (must be before any test subdirectory)
include(${CMAKE_SOURCE_DIR}/cmake/test_macros.cmake)

# Common test utilities
add_subdirectory(common)

# Tensor tests
add_subdirectory(tensor)

# Optimizer tests
add_subdirectory(optimizer)

# Autograd operator tests
add_subdirectory(autograd)

# LoRA tests
add_subdirectory(lora)

# Hook tests
add_subdirectory(hook)

# Dtype dispatch tests
add_subdirectory(dtype)

# Transformer architecture tests
add_subdirectory(transformer)

# Generator tests
add_subdirectory(generator)
